--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
+primaryColor="#aa2121"
+backgroundColor="#0c0d43"
+secondaryBackgroundColor="#0c0d43"
+textColor="#ffffff"
 font="sans serif"
