--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#aa2121"
 backgroundColor="#0c0d43"
-secondaryBackgroundColor="#0c0d43"
+secondaryBackgroundColor="#343583"
 textColor="#ffffff"
 font="sans serif"
